fix signal name too long in the overview plot

--- a/client/src/components/pageExp.less
+++ b/client/src/components/pageExp.less
@@ -64,6 +64,7 @@
             line-height: 40px;
             background-color: white;
             transition: background-color 1s;
+            overflow: hidden;
         }
         .plot {
             position: absolute;
